--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="canonical" href="https://www.bayouwebsites.com/"/>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/index.css"/>
+    <link rel="stylesheet" href="./Scripts/javascript.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
@@ -31,6 +32,9 @@
     <nav class="nav" role="navigation" aria-label="Main Navigation">
         <div class="nav-container">
             <a href="index.html" class="nav-logo" aria-label="Go to Home Page">Bayou Websites</a>
+            <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+                <span class="nav-toggle-icon"></span>
+            </button>
             <ul class="nav-menu">
                 <li class="nav-item active"><a href="index.html" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
@@ -38,7 +42,6 @@
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
-            <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"></button>
         </div>
     </nav>
 
