--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
     <link rel="canonical" href="https://www.bayouwebsites.com/"/>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/contact.css"/>
+    <link rel="stylesheet" href="./Scripts/javascript.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
@@ -27,19 +28,21 @@
     <script src="./JavaScript/javascript.js" defer></script>
 </head>
 <body>
-    <nav class="nav" role="navigation" aria-label="Main Navigation">
-        <div class="nav-container">
-            <a href="index.html" class="nav-logo" aria-label="Go to Home Page">Bayou Websites</a>
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="index.html" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="services.html">Services</a></li>
-                <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="nav-item active"><a href="contact.html">Contact</a></li>
-            </ul>
-            <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"></button>
-        </div>
-    </nav>
+  <nav class="nav" role="navigation" aria-label="Main Navigation">
+    <div class="nav-container">
+        <a href="index.html" class="nav-logo" aria-label="Go to Home Page">Bayou Websites</a>
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="nav-toggle-icon"></span>
+        </button>
+        <ul class="nav-menu">
+            <li class="nav-item"><a href="index.html" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="about.html">About</a></li>
+            <li class="nav-item"><a href="services.html">Services</a></li>
+            <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+            <li class="nav-item active"><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
+</nav>
 
     <header class="hero" role="banner">
         <div class="hero-content fade-in">
