--- a/contact.html
+++ b/contact.html
@@ -27,23 +27,25 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" as="style">
     <script src="./JavaScript/javascript.js" defer></script>
 </head>
-<body>
-  <nav class="nav" role="navigation" aria-label="Main Navigation">
-    <div class="nav-container">
-        <a href="index.html" class="nav-logo" aria-label="Go to Home Page">Bayou Websites</a>
-        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-            <span class="nav-toggle-icon"></span>
-        </button>
-        <ul class="nav-menu">
-            <li class="nav-item"><a href="index.html" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="about.html">About</a></li>
-            <li class="nav-item"><a href="services.html">Services</a></li>
-            <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-            <li class="nav-item active"><a href="contact.html">Contact</a></li>
-        </ul>
-    </div>
-</nav>
 
+<body>
+  <header class="navbar" role="banner">
+    <div class="navbar-container">
+        <a href="index.html" class="navbar-logo" aria-label="Go to Home Page">Bayou Websites</a>
+        <button class="navbar-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="navbar-toggle-icon"></span>
+        </button>
+        <nav class="navbar-menu" id="navbar-menu" aria-label="Main Navigation">
+            <ul class="navbar-list">
+                <li class="navbar-item"><a href="index.html">Home</a></li>
+                <li class="navbar-item"><a href="about.html">About</a></li>
+                <li class="navbar-item"><a href="services.html">Services</a></li>
+                <li class="navbar-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="navbar-item activce"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
     <header class="hero" role="banner">
         <div class="hero-content fade-in">
             <h1 class="hero-title">Contact</h1>
@@ -54,7 +56,7 @@
     <section id="contact" class="section" aria-labelledby="contact-heading">
         <div class="container">
           <h2 id="contact-heading" class="section-title">Get in Touch</h2>
-          <form id="contact-form" action="https://formspree.io/f/your-valid-form-id" method="POST">
+          <form id="contact-form" action="https://formspree.io/f/xeqyrgva" method="POST">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" id="name" name="name" placeholder="Enter your name" required autocomplete="name">
