--- a/contact.html
+++ b/contact.html
@@ -26,101 +26,304 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" as="style">
     <script src="./JavaScript/javascript.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+Q1g6v2x4j8z9e0c4f3a1b2d3e4f5g6h7i8j9k0l1m2n3o4p5q6r7s8t9u0v1w" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8d7x1z5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8d7x1z5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 
-<body>
-  <header class="navbar" role="banner">
-    <div class="navbar-container">
-        <a href="index.html" class="navbar-logo" aria-label="Go to Home Page">Bayou Websites</a>
-        <button class="navbar-toggle" aria-label="Toggle navigation" aria-expanded="false">
-            <span class="navbar-toggle-icon"></span>
-        </button>
-        <nav class="navbar-menu" id="navbar-menu" aria-label="Main Navigation">
-            <ul class="navbar-list">
-                <li class="navbar-item"><a href="index.html">Home</a></li>
-                <li class="navbar-item"><a href="about.html">About</a></li>
-                <li class="navbar-item"><a href="services.html">Services</a></li>
-                <li class="navbar-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="navbar-item activce"><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-    <header class="hero" role="banner">
-        <div class="hero-content fade-in">
-            <h1 class="hero-title">Contact</h1>
-            <a href="contact.html" class="hero-cta">Get Started</a>
-        </div>
-    </header>
 
-    <section id="contact" class="section" aria-labelledby="contact-heading">
-        <div class="container">
-          <h2 id="contact-heading" class="section-title">Get in Touch</h2>
-          <form id="contact-form" action="https://formspree.io/f/xeqyrgva" method="POST">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" id="name" name="name" placeholder="Enter your name" required autocomplete="name">
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" placeholder="Enter your email address" required autocomplete="email">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
-            </div>
-            <button type="submit" class="btn">Send Message</button>
-          </form>
-        </div>
-      </section>
-      
-    <section id="faq" class="section" aria-labelledby="faq-heading">
-      <div class="container">
-        <h2 id="faq-heading" class="section-title">Frequently Asked Questions</h2>
-        <dl class="faq-list">
-        <div class="faq-item">
-          <dt class="faq-question">What services do you offer?</dt>
-          <dd class="faq-answer">We specialize in web design, development, and maintenance for blue-collar businesses within the United States.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">How can I get a quote?</dt>
-          <dd class="faq-answer">You can fill out the contact form.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Do you offer ongoing support?</dt>
-          <dd class="faq-answer">Yes, we provide monthly support.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">How long does it take to build a website?</dt>
-          <dd class="faq-answer">The timeline depends on the complexity of the project, but most websites are completed within 4-6 weeks.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Will my website be mobile-friendly?</dt>
-          <dd class="faq-answer">Yes, all our websites are designed to be fully responsive and optimized for mobile devices.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Can you help with SEO?</dt>
-          <dd class="faq-answer">Yes, we provide basic SEO optimization to help your website rank better on search engines.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">What industries do you serve?</dt>
-          <dd class="faq-answer">We serve blue-collar businesses, including construction, plumbing, electrical, and more.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">What if I need changes after the website is live?</dt>
-          <dd class="faq-answer">We offer post-launch support and maintenance to handle updates and changes as needed.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">What payment methods do you accept?</dt>
-          <dd class="faq-answer">We accept Venmo, Stripe, and Paypal. Fees will be added to the price.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">What security measures do you implement?</dt>
-          <dd class="faq-answer">We implement SSL certificates, regular updates, and other security measures to protect your website.</dd>
-        </div>
-        </dl>
+<body>
+  <nav class="navbar fixed-top">
+      <a class="navbar-brand" href="#">Bayou Websites
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#uniqueNavbarNav" aria-controls="uniqueNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="uniqueNavbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+              <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          </ul>
       </div>
-    </section>
+  </nav>
+  <style>
+
+
+  /* Navbar Styles */
+  .navbar {
+      background-color: var(--primary-color);
+      padding: 0.75rem 1.5rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.3s, box-shadow 0.3s;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      color: white;
+  }
+
+  .navbar-brand {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: var(--white-color);
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+  }
+
+  .navbar-toggler {
+      border: none;
+      background: transparent;
+      color: var(--white-color);
+      font-size: 1.25rem;
+      transition: transform 0.3s;
+  }
+
+  .navbar-toggler:hover {
+      transform: scale(1.1);
+  }
+
+  .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
+
+  .navbar-nav {
+      display: flex;
+      gap: 1rem;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+  }
+
+  .nav-link {
+      color: var(--white-color);
+      text-decoration: none;
+      font-size: 1rem;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+      transition: color 0.3s, background-color 0.3s;
+  }
+
+  .nav-link:hover {
+      color: var(--secondary-color);
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 5px;
+  }
+
+  .collapse.navbar-collapse {
+      justify-content: flex-end;
+  }
+
+  @media (max-width: 768px) {
+      .navbar-nav {
+          flex-direction: column;
+          background-color: var(--primary-color);
+          position: absolute;
+          top: 100%;
+          left: 0;
+          width: 100%;
+          padding: 1rem 0;
+          display: none;
+      }
+
+      .navbar-nav.show {
+          display: flex;
+      }
+
+      .nav-item {
+          text-align: center;
+      }
+  }
+
+  /* Always show navbar items on larger screens */
+  @media (min-width: 768px) {
+      .navbar-nav {
+          display: flex !important; /* Ensure items are displayed in a row */
+          flex-direction: row;
+          gap: 1rem;
+      }
+
+      .collapse.navbar-collapse {
+          display: flex !important; /* Prevent collapsing on larger screens */
+          justify-content: flex-end;
+      }
+  }
+
+  /* Default Bootstrap behavior for smaller screens */
+  @media (max-width: 768px) {
+      .navbar-nav {
+          flex-direction: column; /* Stack items vertically */
+          background-color: var(--primary-color);
+          padding: 1rem 0;
+      }
+  }
+  </style><!-- Hero Header -->
+<header class="hero bg-primary text-white text-center py-5" role="banner">
+  <div class="container hero-content fade-in">
+    <h1 class="hero-title display-4 fw-bold">Get in Touch</h1>
+  </div>
+</header>
+
+<!-- Contact Form Section -->
+<section id="contact" class="section py-5 bg-light" aria-labelledby="contact-heading">
+  <div class="container">
+    <h2 id="contact-heading" class="section-title text-center mb-4">Let’s Chat Today</h2>
+    <form id="contact-form" action="https://formspree.io/f/xeqyrgva" method="POST" class="mx-auto" style="max-width: 600px;">
+      <div class="mb-3">
+        <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
+        <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required autocomplete="name">
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
+        <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email address" required autocomplete="email">
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message <span class="text-danger">*</span></label>
+        <textarea id="message" name="message" class="form-control" rows="5" placeholder="Write your message here" required></textarea>
+      </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary btn-lg">Send Message</button>
+      </div>
+    </form>
+  </div>
+</section>
+
+<!-- FAQ Section -->
+<section id="faq" class="section py-5" aria-labelledby="faq-heading">
+  <div class="container">
+    <h2 id="faq-heading" class="section-title text-center mb-5">Frequently Asked Questions</h2>
+    <div class="accordion" id="faqAccordion">
+
+      <!-- Reusable FAQ item -->
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
+            What services do you offer?
+          </button>
+        </h3>
+        <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We specialize in web design, development, and maintenance for blue-collar businesses across the U.S.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+            How can I get a quote?
+          </button>
+        </h3>
+        <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Simply fill out the contact form above and we’ll respond within 24 hours.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
+            Do you offer ongoing support?
+          </button>
+        </h3>
+        <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Absolutely! We offer monthly maintenance packages for continued success.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4">
+            Will my website be mobile-friendly?
+          </button>
+        </h3>
+        <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Yes, all our websites are fully responsive and optimized for every screen size.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5">
+            Can you help with SEO?
+          </button>
+        </h3>
+        <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Yes, we include basic SEO in all packages and offer advanced SEO services upon request.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq6">
+            What industries do you serve?
+          </button>
+        </h3>
+        <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We proudly serve blue-collar industries including plumbing, construction, HVAC, electrical, and more.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq7">
+            What payment methods do you accept?
+          </button>
+        </h3>
+        <div id="faq7" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We accept Venmo, Stripe, and PayPal. Payment platform fees may apply.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item mb-3">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq8">
+            What if I need changes after the website is live?
+          </button>
+        </h3>
+        <div id="faq8" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We offer post-launch updates and maintenance to keep your site running smoothly.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h3 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq9">
+            What security measures do you implement?
+          </button>
+        </h3>
+        <div id="faq9" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            All our sites include SSL encryption, secure coding practices, and regular plugin/theme updates.
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <footer class="footer" role="contentinfo">
       <div class="footer-content">
