--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
             <div class="container">
-                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 80%;">Bayou Websites</a>
+                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 150%;">Bayou Websites</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -166,12 +166,19 @@
             });
         });
     </script>
-    
+     <main>
+      <header class="hero" role="banner">
+          <div class="hero-content fade-in">
+              <h1 class="hero-title">Our Portfolio</h1>
+              <a href="contact.html" class="hero-cta">Get Started</a>
+          </div>
+      </header>
+  </main>
 
         <!-- Portfolio Section -->
         <section id="portfolio" class="portfolio-section py-5 bg-light" aria-labelledby="portfolio-heading">
           <div class="container">
-            <h2 id="portfolio-heading" class="section-title text-center mb-4">We Constantly Build</h2>
+            <h2 id="portfolio-heading" class="section-title text-center mb-4">What We Did.</h2>
             <p class="portfolio-intro text-center lead mb-5">
               Explore a selection of our recent web development projects, showcasing our passion for delivering impactful digital experiences across various industries.
             </p>
