--- a/services.html
+++ b/services.html
@@ -133,11 +133,12 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
             <div class="container">
-                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 80%;">Bayou Websites</a>
+                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 150%;">Bayou Websites</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -178,7 +179,7 @@
     
     <section class="web-services" id="web-services" aria-labelledby="web-services-heading">
         <div class="container">
-          <h2 id="web-services-heading" class="section-title">Our Web Services</h2>
+          <h2 id="web-services-heading" class="section-title">What We Do!</h2>
           <p class="section-subtitle">Everything your business needs to succeed online.</p>
           
           <div class="services-grid">
@@ -265,7 +266,7 @@
 
     <!-- Brand -->
     <div class="footer-brand">
-      <h2 class="footer-logo">Bayou Websites</h2>
+      <p class="footer-logo">Bayou Websites</p>
       <p class="footer-tagline">Web Development for Blue-Collar Businesses</p>
     </div>
 
