--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
             <div class="container">
-                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 80%;">Bayou Websites</a>
+                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 150%;">Bayou Websites</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -167,6 +167,14 @@
         });
     </script>
     
+    <main>
+      <header class="hero" role="banner">
+          <div class="hero-content fade-in">
+              <h1 class="hero-title">Welcome Home!</h1>
+              <a href="contact.html" class="hero-cta">Get Started</a>
+          </div>
+      </header>
+  </main>
 
     <section class="hero-section py-5 text-white bg-dark" aria-labelledby="hero-heading">
         <div class="container text-center">
