--- a/portfolio.html
+++ b/portfolio.html
@@ -176,9 +176,9 @@
   </main>
 
         <!-- Portfolio Section -->
-        <section id="portfolio" class="portfolio-section py-5 bg-light" aria-labelledby="portfolio-heading">
+        <section id="portfolio" class="portfolio-section py-5 bg-light" aria-labelledby="web-services-heading">
           <div class="container">
-            <h2 id="portfolio-heading" class="section-title text-center mb-4">What We Did.</h2>
+            <h2 id="web-services-heading" class="section-title">What We Did</h2>
             <p class="portfolio-intro text-center lead mb-5">
               Explore a selection of our recent web development projects, showcasing our passion for delivering impactful digital experiences across various industries.
             </p>
