--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       
       <section class="highlights-section py-5 bg-light" aria-labelledby="highlights-heading">
         <div class="container">
-          <h2 id="highlights-heading" class="text-center mb-5">Why Choose Us?</h2>
+          <h2 id="web-services-heading" class="section-title">Why Choose Us?</h2>
           <div class="row text-center">
             <div class="col-md-4 mb-4">
               <i class="fas fa-mobile-alt fa-3x mb-3 text-primary"></i>
