--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,9 @@
     <meta property="og:image" content="./images/og-image.jpg"/>
     <meta property="og:url" content="https://www.bayouwebsites.com"/>
     <meta property="og:type" content="website"/>
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bayou Websites | Home">
-    <meta name="twitter:description" content="Welcome to Bayou Websites, your partner in crafting unique web experiences for blue-collar businesses in Louisiana.">
-    <meta name="twitter:image" content="./images/og-image.jpg">
     <link rel="canonical" href="https://www.bayouwebsites.com/"/>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="./css/services.css"/>
+    <link rel="stylesheet" href="./css/contact.css"/>
     <link rel="stylesheet" href="./Scripts/javascript.js"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,148 +28,48 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8d7x1z5l5e5c5e5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <style>
- 
-        /* Navbar Styles */
-        .navbar {
-            background-color: var(--primary-color);
-            padding: 0.5rem 1rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
-        .navbar-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: var(--white-color);
-            text-decoration: none;
-        }
+  <!-- create a modern navbar section -->
+  
+  <section class="navbar-section" aria-labelledby="navbar-heading"></section>
+    <nav class="navbar navbar-expand-lg" aria-label="Main navigation">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="#">Bayou Websites</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fw-semibold" aria-current="page" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </section>
 
-        .navbar-toggler {
-            border: none;
-            background: transparent;
-            color: var(--white-color);
-            font-size: 1.25rem;
-            transition: transform 0.3s;
-        }
+  <!-- Hero Section -->
+  <section class="hero-section py-5 text-center bg-primary text-white" aria-labelledby="hero-heading">
+    <div class="container">
+      <h1 id="hero-heading" class="display-4 fw-bold">Contact Us</h1>
+      <a href="#web-services-heading" class="btn btn-light btn-lg mt-3">Explore Our Services</a>
+    </div>
+  </section>
 
-        .navbar-toggler:hover {
-            transform: scale(1.1);
-        }
-
-        .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-        }
-
-        .navbar-nav {
-            display: flex;
-            flex-direction: row;
-            gap: 1rem;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .nav-link {
-            color: var(--white-color);
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            transition: color 0.3s, background-color 0.3s;
-        }
-
-        .nav-link:hover {
-            color: var(--secondary-color);
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 5px;
-        }
-
-        .collapse.navbar-collapse {
-            justify-content: flex-end;
-        }
-
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .navbar-nav {
-                flex-direction: column;
-                background-color: var(--primary-color);
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 100%;
-                padding: 1rem 0;
-                display: none;
-            }
-
-            .navbar-nav.show {
-                display: flex;
-            }
-
-            .nav-item {
-                text-align: center;
-            }
-        }
-
-        @media (min-width: 768px) {
-            .navbar-nav {
-                display: flex !important;
-                flex-direction: row;
-                gap: 1rem;
-            }
-
-            .collapse.navbar-collapse {
-                display: flex !important;
-                justify-content: flex-end;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
-            <div class="container">
-                <a class="navbar-brand fw-bold text-primary" href="index.html" style="font-size: 150%;">Bayou Websites</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto align-items-center">
-                        <li class="nav-item"><a class="nav-link active text-dark" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-dark" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link text-dark" href="services.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link text-dark" href="portfolio.html">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link text-dark" href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <script>
-        window.addEventListener('scroll', () => document.querySelector('.navbar').classList.toggle('scrolled', window.scrollY > 50));
-    </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const toggler = document.querySelector('.navbar-toggler');
-            const nav = document.querySelector('.navbar-nav');
-
-            toggler.addEventListener('click', () => {
-                nav.classList.toggle('show');
-            });
-        });
-    </script>
-    
-    <main>
-      <header class="hero" role="banner">
-          <div class="hero-content fade-in">
-              <h1 class="hero-title">Contact Us</h1>
-              <a href="contact.html" class="hero-cta">Get Started</a>
-          </div>
-      </header>
   </main><!-- Contact Form Section -->
   <section id="contact" class="section py-5 bg-light" aria-labelledby="contact-heading">
     <div class="container">
